# pyworkon

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEVEL.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
pyworkon/: __main__.py  config.py  db.py  exceptions.py  isit.py  project.py  tmux_mgr.py  utils.py
pyworkon/app_mode/shell/: __init__.py  shell.py
pyworkon/app_mode/shell/actions/: _completer.py  provider.py  workon.py
pyworkon/assets/: AppIcon.icns
pyworkon/daemon/: client.py  git_watcher.py  models.py  project_mgr.py  protocol.py  server.py  tmux_mgr.py
pyworkon/daemon/providers/: __init__.py  circuit_breaker.py  models.py
pyworkon/daemon/providers/github/: consumer.py  github.py  models.py
pyworkon/daemon/providers/gitlab/: consumer.py  gitlab.py  models.py
pyworkon/defaults/: tmuxp.yml
pyworkon/interfaces/: __init__.py
pyworkon/interfaces/shell/: __init__.py  command.py  common.py  plugin.py  shell.py
pyworkon/interfaces/shell/actions/: __init__.py  provider.py  workon.py
pyworkon/interfaces/shell/commands/: __init__.py  agent.py  app.py  clone.py  daemon.py  dashboard.py  help.py  popup.py  provider.py  shell.py  sidebar.py  tmux.py  workon.py
pyworkon/interfaces/tui/: base.py  dashboard.py  data.py  icons.py  models.py  popup.py  tui.py
pyworkon/interfaces/tui/widgets/: __init__.py  agent_list.py  branch_row.py  plain_session_row.py  pr_detail.py  pr_link.py  project_row.py  project_tree.py  review_request_list.py  session_card.py  session_header.py
pyworkon/providers/: __init__.py
pyworkon/providers/bitbucket/: bitbucket.py  consumer.py  models.py
pyworkon/providers/github/: consumer.py  github.py  models.py
pyworkon/providers/gitlab/: consumer.py  gitlab.py  models.py
pyworkon/shell/: shell.py
pyworkon/shell/actions/: __init__.py  _completer.py  workon.py
pyworkon/sidebar/: app.py  data.py  icons.py  models.py
tests/: conftest.py  test_agent_cli.py  test_apps.py  test_daemon.py  test_data.py  test_git_watcher.py  test_project.py  test_protocol.py  test_tui_models.py  test_widgets.py
